--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "blocklyjs"]
 	path = blocklyjs
-	url = git@gitlab.supercharge.io:revolutionrobotics/blockly-js.git
+	url=git@github.com:RevolutionRobotics/RevolutionRoboticsBlocklyDistribution.git
