--- a/blockly-android/build.gradle
+++ b/blockly-android/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
 task copyBlocklyFiles(type: Copy) {
     from('../blocklyjs/Blockly') {
-        include 'blockly_compressed.js','python_compressed.js', 'blocks_compressed.js', 'msg/js/**', 'media/**', 'webview.html', 'toolbox_standard.js'
+        include 'blockly_compressed.js','python_compressed.js', 'blocks_compressed.js', 'msg/js/**', 'media/**', 'webview.html', 'toolbox_standard.js', 'toolbox/toolboxes.js'
     }
     into project(':blockly-android').file('./src/main/assets/blockly')
 }
